apps/pgAdmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin

  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
    spec:
      securityContext:
        fsGroup: 5050
        fsGroupChangePolicy: OnRootMismatch

      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.17
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsNonRoot: true
            runAsUser: 5050
            runAsGroup: 5050
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi

          ports:
            - containerPort: 8080
              name: pgadmin
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgadmin
            - name: pgadmin-config
              mountPath: /pgadmin4/config_local.py
              subPath: config_local.py
              readOnly: true

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin
        - name: pgadmin-config
          configMap:
            name: pgadmin
            items:
              - key: config_local.py
                path: config_local.py
      restartPolicy: Always
