apps/pgAdmin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: pgadmin-route
    namespace: pgadmin
spec:
    parentRefs:
        - name: gatewayapi
          namespace: traefik
          sectionName: https
    hostnames:
        - ENC[AES256_GCM,data:JNDtmegot0gWOr5dSDwit1A=,iv:cU3OrAd79fGzC3wSJHj6F5isYokQcoNCeGYDvBB4MYI=,tag:tIl3zRA85ts4VcBw8qQZcg==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: pgadmin
              port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: default-headers
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZUFJVa1RLYjZkd0lKZnBW
[...]
            u7yXSOusxupM/ALdGClWAMd+FdhcPwwFL3PgYWuqM1lt/zsX3bSrEg==
            -----END AGE ENCRYPTED FILE-----
          recipient: age149cx2m4rwfw6argx9fam62vjtcjgeuepd78ej8f0mcpatdgxdqfslqu454
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-08-05T13:18:37Z"
    mac: ENC[AES256_GCM,data:oNcXjLGRREkKdTX7QN2hJUDO42I7gNOjwcGXacLN351WTeEg/dDk3qHeBaTNXKEFyva1jrXDRxruEaqg60Rmr/kzEjoiN6m5+DI4rJ/dVG3u48/rKXVoQ3z0lowbEq0SzIjvklBP68oImUzxyuMTwKSU4ancvD8RyAD3fMTmzbQ=,iv:SiUUC2j1yJwP/YxJUjGqu3yFWDzbFnLMApmvoc4glF8=,tag:NqT+Q9tTwjvuW0dJF6WNjw==,type:str]
    version: 3.13.3
